Removed webapp folder and did minor changes. Also the server now starts but doesnt serve the api

--- a/pos.properties
+++ b/pos.properties
@@ -3,7 +3,7 @@ app.name=POS Application
 app.baseUrl=/pos
 
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/employee
+jdbc.url=jdbc:mysql://127.0.0.1:3306/POS
 jdbc.username=root
 jdbc.password=dontreadthis@123
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
