--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -7,6 +7,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>commons</artifactId>
+    <packaging>war</packaging>
     <version>0.0.1-SNAPSHOT</version>
     <dependencies>
         <!-- No specific dependencies -->
