--- a/invoice/pom.xml
+++ b/invoice/pom.xml
@@ -7,6 +7,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>invoice</artifactId>
+    <packaging>war</packaging>
     <dependencies>
         <dependency>
             <groupId>com.increff.pos</groupId>
