--- a/server/pom.xml
+++ b/server/pom.xml
@@ -8,6 +8,7 @@
     </parent>
     <artifactId>server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <dependencies>
         <dependency>
             <groupId>com.increff.pos</groupId>
@@ -19,5 +20,10 @@
 <!--            <artifactId>spring-boot-starter-web</artifactId>-->
 <!--            <version>${spring.version}</version>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
     </dependencies>
 </project>
