--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -7,7 +7,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>commons</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <version>0.0.1-SNAPSHOT</version>
     <dependencies>
         <!-- No specific dependencies -->
