--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <!-- Project dependencies -->
         <spring.version>4.3.6.RELEASE</spring.version>
         <swagger.version>2.4.0</swagger.version>
-        <jackson.version>2.9.8</jackson.version>
+        <jackson.version>2.15.3</jackson.version>
         <thymeleaf.version>3.0.9.RELEASE</thymeleaf.version>
         <hibernate.version>5.4.0.Final</hibernate.version>
         <mysql.version>8.0.17</mysql.version>
@@ -102,7 +102,17 @@
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
             <version>${jackson.version}</version>
         </dependency>
 
@@ -203,12 +213,12 @@
                 <configuration>
                     <scanIntervalSeconds>5</scanIntervalSeconds>
                     <useTestClasspath>false</useTestClasspath>
-                    <systemProperties>
+                    <!-- <systemProperties>
                         <systemProperty>
                             <name>log4j.configuration</name>
                             <value>file:./log4j.properties</value>
                         </systemProperty>
-                    </systemProperties>
+                    </systemProperties> -->
                     <httpConnector>
                         <port>${jetty.http.port}</port>
                     </httpConnector>
@@ -246,6 +256,14 @@
                 </executions>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.4.0</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
         </plugins>
 
 
