--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.15.3</version> <!-- Replace with the latest version -->
+            <version>${jackson.version}</version>
         </dependency>
 
         <dependency>
