--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 
         <!-- Jetty configuration -->
         <jetty.version>9.4.21.v20190926</jetty.version>
-        <jetty.http.port>9000</jetty.http.port>
+        <jetty.http.port>9001</jetty.http.port>
         <jetty.context>/pos</jetty.context>
         <failOnMissingWebXml>false</failOnMissingWebXml>
 
@@ -199,6 +199,18 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>${javax.servlet.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.30</version>
         </dependency>
 
     </dependencies>
