--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,8 @@
         <jetty.context>/pos</jetty.context>
         <failOnMissingWebXml>false</failOnMissingWebXml>
 
+        <!-- Spring Boot -->
+        <spring.boot.version>2.5.4</spring.boot.version>
 
     </properties>
 
@@ -218,6 +220,24 @@
             <artifactId>lombok</artifactId>
             <version>1.18.30</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.1.5.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>${spring.boot.version}</version>
         </dependency>
 
     </dependencies>
