--- a/server/pom.xml
+++ b/server/pom.xml
@@ -45,7 +45,7 @@
             </exclusions>
         </dependency>
 
-        <!-- Spring Boot Starter Validation -->
+        <!-- Spring Boot Validation -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
@@ -125,14 +125,13 @@
             <version>${spring.version}</version>
         </dependency>
 
-        <!-- Spring ORM -->
+        <!-- Spring ORM and Database -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
             <version>${spring.version}</version>
         </dependency>
 
-        <!-- Hibernate -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
