--- a/invoice/pom.xml
+++ b/invoice/pom.xml
@@ -7,8 +7,13 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>invoice</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.increff.pos</groupId>
             <artifactId>commons</artifactId>
@@ -18,11 +23,6 @@
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>fop</artifactId>
             <version>2.8</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring.boot.version}</version>
         </dependency>
     </dependencies>
 </project>
