--- a/pos.properties
+++ b/pos.properties
@@ -1,6 +1,6 @@
 app.version=1.0
 app.name=POS Application
-app.baseUrl=/pos
+app.baseUrl=
 
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/pos
@@ -9,3 +9,7 @@ jdbc.password=dontreadthis@123
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql=false
 hibernate.hbm2ddl.auto=update
+
+invoice.storage.path=server/src/main/resources/invoices
+
+product.image.path=server/src/main/resources/images
