--- a/server/pom.xml
+++ b/server/pom.xml
@@ -14,6 +14,8 @@
         <spring.version>5.3.27</spring.version>
         <spring.boot.version>2.7.12</spring.boot.version>
         <hibernate.version>5.6.15.Final</hibernate.version>
+        <jetty.version>9.4.21.v20190926</jetty.version>
+        <jetty.http.port>9000</jetty.http.port>
     </properties>
 
     <dependencies>
@@ -91,7 +93,7 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.9.2</version>
+            <version>${swagger.version}</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
@@ -130,6 +132,12 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>${hibernate.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.increff.pos</groupId>
+            <artifactId>invoice</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
