--- a/pos.properties
+++ b/pos.properties
@@ -13,3 +13,5 @@ hibernate.hbm2ddl.auto=update
 invoice.storage.path=server/src/main/resources/invoices
 
 product.image.path=server/src/main/resources/images
+
+server.baseDir=server/src/main/resources
