--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <!-- Jetty configuration -->
         <jetty.version>9.4.21.v20190926</jetty.version>
         <jetty.http.port>9000</jetty.http.port>
-        <jetty.context>/pos</jetty.context>
+        <jetty.context>/pos/api</jetty.context>
         <failOnMissingWebXml>false</failOnMissingWebXml>
 
         <!-- Spring Boot -->
