--- a/pos.properties
+++ b/pos.properties
@@ -15,3 +15,5 @@ invoice.storage.path=server/src/main/resources/invoices
 product.image.path=server/src/main/resources/images
 
 server.baseDir=server/src/main/resources
+
+supervisor.emails=admin@increff.com,admin1@increff.com,admin2@increff.com
