Inventory works. Product changed to account for inventory. Removed product name search from inventory

--- a/pos.properties
+++ b/pos.properties
@@ -17,3 +17,5 @@ product.image.path=server/src/main/resources/images
 server.baseDir=server/src/main/resources
 
 supervisor.emails=admin@increff.com,admin1@increff.com,admin2@increff.com
+
+PAGE_SIZE=10
